--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <p>Nomor pesanan Anda: <strong id="order-id">WM123456</strong></p>
                 <p>Kami akan mengirimkan detail pembayaran via WhatsApp</p>
                 <a href="#" id="whatsapp-btn" class="btn whatsapp-btn">
-                    <i class="fab fa-whatsapp"></i> Chat via WhatsApp
+                    <i class="fab fa-whatsapp"></i> Chat via WhatsApp 0877-8534-1233
                 </a>
             </div>
         </div>
@@ -248,7 +248,7 @@
             <div class="footer-grid">
                 <div class="footer-about">
                     <h3>Warung Mama Miko</h3>
-                    <p>Menyediakan makanan tradisional Indonesia dengan cita rasa otentik sejak 2010</p>
+                    <p>Menyediakan makanan tradisional Indonesia dengan cita rasa otentik sejak 2020</p>
                 </div>
                 <div class="footer-contact">
                     <h3>Kontak Kami</h3>
@@ -270,3 +270,4 @@
 
     <script src="script.js"></script>
 </body>
+
