--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                 </div>
                 <h2>Pesanan Berhasil!</h2>
                 <p>Nomor pesanan Anda: <strong id="order-id">WM123456</strong></p>
-                <p>Kami akan mengirimkan detail pembayaran via WhatsApp 0877-8534-1233</p>
+                <p>Kami akan mengirimkan detail pembayaran via WhatsApp</p>
                 <a href="#" id="whatsapp-btn" class="btn whatsapp-btn">
-                    <i class="fab fa-whatsapp"></i> Chat via WhatsApp 0877-8534-1233
+                    <i class="fab fa-whatsapp"></i> Chat via WhatsApp 087785341233
                 </a>
             </div>
         </div>
@@ -270,5 +270,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 
